--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
 	"name": "i18n-webpack-plugin",
-	"version": "0.1.0",
+	"version": "0.2.0",
 	"author": "Tobias Koppers @sokra",
 	"description": "Embed localization into your bundle",
-	"dependencies": {
-		"webpack": "0.9.x"
+	"peerDependencies": {
+		"webpack": "0.10.x"
 	},
 	"licenses": [
 		{
