--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-	"name": "i18n-webpack-plugin",
-	"version": "0.2.7",
-	"author": "Tobias Koppers @sokra",
-	"description": "Embed localization into your bundle",
-	"peerDependencies": {
-		"webpack": ">=0.10 <2"
-	},
-	"licenses": [
-		{
-			"type": "MIT",
-			"url": "http://www.opensource.org/licenses/mit-license.php"
-		}
-	],
-	"repository": { 
-		"type": "git",
-		"url" : "https://github.com/webpack/i18n-webpack-plugin.git"
-	}
+  "name": "i18n-webpack-plugin",
+  "version": "0.2.7",
+  "author": "Tobias Koppers @sokra",
+  "description": "Embed localization into your bundle",
+  "peerDependencies": {
+    "webpack": ">=0.10 <2 || ^2.1.0-beta"
+  },
+  "licenses": [
+    {
+      "type": "MIT",
+      "url": "http://www.opensource.org/licenses/mit-license.php"
+    }
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/webpack/i18n-webpack-plugin.git"
+  }
 }
