--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Tobias Koppers @sokra",
   "description": "Embed localization into your bundle",
   "peerDependencies": {
-    "webpack": ">=0.10 <2 || ^2.1.0-beta || ^2.2.0-rc"
+    "webpack": ">=2.3.1"
   },
   "licenses": [
     {
@@ -15,5 +15,15 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/webpack/i18n-webpack-plugin.git"
+  },
+  "scripts": {
+    "test": "tape test/**/*.test.js",
+    "watch": "chokidar index.js lib/*.js -c 'npm test'"
+  },
+  "devDependencies": {
+    "acorn": "^4.0.11",
+    "chokidar-cli": "^1.2.0",
+    "tape": "^4.6.3",
+    "webpack": "^2.3.1"
   }
 }
