--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "acorn": "^4.0.11",
     "chokidar-cli": "^1.2.0",
+    "spy": "^1.0.0",
     "tape": "^4.6.3",
     "webpack": "^2.3.1"
   }
