--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,8 @@
 {
   "extends": "webpack",
   "rules": {
+    "import/no-unresolved": 0,
+    "import/extensions": 0,
     "no-plusplus": 1,
     "consistent-return": 1,
     "no-multi-assign": 1,
