--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nsp": "^2.6.3",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
+    "webpack": "^2.4.1",
     "webpack-defaults": "^0.4.6"
   },
   "peerDependencies": {
