--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
     "no-param-reassign": 1,
     "prefer-destructuring": 1,
     "no-nested-ternary": 1,
+    "no-underscore-dangle": [ 2, { "allow": ["__dirname"], "allowAfterThis": true } ],
     "prefer-rest-params": 1
   }
 }
