--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
   "license": "MIT",
   "scripts": {
     "webpack-defaults": "webpack-defaults",
-    "start": "yarn run serve:dev src",
+    "start": "yarn run build -- -w",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
     "clean:dist": "del-cli dist",
     "lint": "eslint --cache src test",
     "lint-staged": "lint-staged",
-    "prebuild": "yarn run clean:dist",
+    "prebuild": "yarn run clean",
     "prepublish": "yarn run build",
     "release": "yarn run standard-version",
     "security": "nsp check",
@@ -25,7 +25,8 @@
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
     "travis:coverage": "yarn run test:coverage",
     "travis:lint": "yarn run lint && yarn run security",
-    "travis:test": "yarn run test"
+    "travis:test": "yarn run test",
+    "clean": "del-cli dist"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
