feat: Add appveyor test script

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
+    "appveyor:test": "npm run test",
     "travis:coverage": "yarn run test:coverage",
     "travis:lint": "yarn run lint && yarn run security",
     "travis:test": "yarn run test",
