--- a/.travis.yml
+++ b/.travis.yml
@@ -7,26 +7,28 @@ matrix:
   fast_finish: true
   include:
     - os: linux
-      node_js: '7'
-      env: WEBPACK_VERSION="2.2.0" JOB_PART=lint
+      node_js: '8'
+      env: WEBPACK_VERSION="2.6.0" JOB_PART=lint
     - os: linux
       node_js: '4.3'
-      env: WEBPACK_VERSION="2.2.0" JOB_PART=test
+      env: WEBPACK_VERSION="2.6.0" JOB_PART=test
     - os: linux
       node_js: '6'
-      env: WEBPACK_VERSION="2.2.0" JOB_PART=test
+      env: WEBPACK_VERSION="2.6.0" JOB_PART=test
     - os: linux
-      node_js: '7'
-      env: WEBPACK_VERSION="2.2.0" JOB_PART=coverage
+      node_js: '8'
+      env: WEBPACK_VERSION="2.6.0" JOB_PART=coverage
 before_install:
+  - 'if [[ `npm -v` != 5* ]]; then npm i -g npm@^5.0.0; fi'
   - nvm --version
   - node --version
+  - npm --version
 before_script:
   - |-
     if [ "$WEBPACK_VERSION" ]; then
-      yarn add webpack@^$WEBPACK_VERSION
+      npm i --no-save webpack@^$WEBPACK_VERSION
     fi
 script:
-  - 'yarn run travis:$JOB_PART'
+  - 'npm run travis:$JOB_PART'
 after_success:
   - 'bash <(curl -s https://codecov.io/bash)'
