--- a/package.json
+++ b/package.json
@@ -10,22 +10,22 @@
   "license": "MIT",
   "scripts": {
     "webpack-defaults": "webpack-defaults",
-    "start": "yarn run build -- -w",
+    "start": "npm run build -- -w",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
     "clean:dist": "del-cli dist",
     "lint": "eslint --cache src test",
     "lint-staged": "lint-staged",
-    "prebuild": "yarn run clean",
-    "prepublish": "yarn run build",
-    "release": "yarn run standard-version",
+    "prebuild": "npm run clean",
+    "prepublish": "npm run build",
+    "release": "npm run standard-version",
     "security": "nsp check",
     "serve:dev": "nodemon $2 --exec babel-node",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "travis:coverage": "yarn run test:coverage",
-    "travis:lint": "yarn run lint && yarn run security",
-    "travis:test": "yarn run test",
+    "travis:coverage": "npm run test:coverage",
+    "travis:lint": "npm run lint && npm run security",
+    "travis:test": "npm run test",
     "clean": "del-cli dist"
   },
   "devDependencies": {
@@ -45,7 +45,7 @@
     "nsp": "^2.6.3",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
-    "webpack-defaults": "^0.4.6"
+    "webpack-defaults": "^1.1.0"
   },
   "peerDependencies": {
     "webpack": "<2 || ^2.1.0-beta || ^2.2.0-rc"
