--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint-staged": "lint-staged",
     "prebuild": "npm run clean",
     "prepublish": "npm run build",
-    "release": "npm run standard-version",
+    "release": "standard-version",
     "security": "nsp check",
     "serve:dev": "nodemon $2 --exec babel-node",
     "test": "jest",
