--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,60 @@
 sudo: false
+dist: trusty
 language: node_js
 branches:
   only:
     - master
-matrix:
+node_js:
+  - 6
+  - 4.3
+# env:
+#   matrix:
+#     - WEBPACK_VERSION=latest
+#     - WEBPACK_VERSION=beta
+# matrix:
+#   fast_finish: true
+#   allow_failures:
+#     - env: WEBPACK_VERSION=beta
+#   include:
+#     - os: linux
+#       node_js: 8
+#       env: WEBPACK_VERSION=latest JOB_PART=lint
+#     - os: linux
+#       node_js: 4.3
+#       env: WEBPACK_VERSION=latest JOB_PART=test
+#     - os: linux
+#       node_js: 6
+#       env: WEBPACK_VERSION=latest JOB_PART=test
+#     - os: linux
+#       node_js: 8
+#       env: WEBPACK_VERSION=beta JOB_PART=test
+#     - os: linux
+#       node_js: 8
+#       env: WEBPACK_VERSION=latest JOB_PART=coverage
+
+jobs:
   fast_finish: true
+  allow_failures:
+    - env: WEBPACK_VERSION=beta
   include:
-    - os: linux
-      node_js: '8'
-      env: WEBPACK_VERSION="2.6.0" JOB_PART=lint
-    - os: linux
-      node_js: '4.3'
-      env: WEBPACK_VERSION="2.6.0" JOB_PART=test
-    - os: linux
-      node_js: '6'
-      env: WEBPACK_VERSION="2.6.0" JOB_PART=test
-    - os: linux
-      node_js: '8'
-      env: WEBPACK_VERSION="2.6.0" JOB_PART=coverage
+    - stage: Test
+      script: npm run travis:$JOB_PART
+      env: WEBPACK_VERSION=latest JOB_PART=test
+    - stage: Static Analysis
+      script: npm run travis:$JOB_PART
+      node_js: 8
+      env: WEBPACK_VERSION=beta JOB_PART=lint
+    - stage: Coverage
+      script: npm run travis:$JOB_PART
+      node_js: 8
+      env: WEBPACK_VERSION=latest JOB_PART=coverage
+      after_success: 'bash <(curl -s https://codecov.io/bash)'
+    - stage: Webpack Canary
+      script: npm run travis:$JOB_PART
+      node_js: 8
+      env: WEBPACK_VERSION=beta JOB_PART=test
+
+
 before_install:
   - 'if [[ `npm -v` != 5* ]]; then npm i -g npm@^5.0.0; fi'
   - nvm --version
@@ -26,9 +63,9 @@ before_install:
 before_script:
   - |-
     if [ "$WEBPACK_VERSION" ]; then
-      npm i --no-save webpack@^$WEBPACK_VERSION
+      npm i --no-save webpack@$WEBPACK_VERSION
     fi
-script:
-  - 'npm run travis:$JOB_PART'
-after_success:
-  - 'bash <(curl -s https://codecov.io/bash)'
+# script:
+#   - 'npm run travis:$JOB_PART'
+# after_success:
+#   - 'bash <(curl -s https://codecov.io/bash)'
