--- a/.travis.yml
+++ b/.travis.yml
@@ -5,38 +5,13 @@ branches:
   only:
     - master
 
-# env:
-#   matrix:
-#     - WEBPACK_VERSION=latest
-#     - WEBPACK_VERSION=beta
-# matrix:
-#   fast_finish: true
-#   allow_failures:
-#     - env: WEBPACK_VERSION=beta
-#   include:
-#     - os: linux
-#       node_js: 8
-#       env: WEBPACK_VERSION=latest JOB_PART=lint
-#     - os: linux
-#       node_js: 4.3
-#       env: WEBPACK_VERSION=latest JOB_PART=test
-#     - os: linux
-#       node_js: 6
-#       env: WEBPACK_VERSION=latest JOB_PART=test
-#     - os: linux
-#       node_js: 8
-#       env: WEBPACK_VERSION=beta JOB_PART=test
-#     - os: linux
-#       node_js: 8
-#       env: WEBPACK_VERSION=latest JOB_PART=coverage
-
 jobs:
   fast_finish: true
   allow_failures:
     - env: WEBPACK_VERSION=beta
   include:
     - &test-latest
-      stage: Test
+      stage: Webpack@latest
       nodejs: 6
       script: npm run travis:$JOB_PART
       env: WEBPACK_VERSION=latest JOB_PART=test
@@ -53,11 +28,10 @@ jobs:
       env: WEBPACK_VERSION=latest JOB_PART=coverage
       script: npm run travis:$JOB_PART
       after_success: 'bash <(curl -s https://codecov.io/bash)'
-    - stage: Webpack Canary
+    - stage: Webpack@beta
       script: npm run travis:$JOB_PART
       node_js: 8
       env: WEBPACK_VERSION=beta JOB_PART=test
-
 
 before_install:
   - 'if [[ `npm -v` != 5* ]]; then npm i -g npm@^5.0.0; fi'
@@ -69,7 +43,3 @@ before_script:
     if [ "$WEBPACK_VERSION" ]; then
       npm i --no-save webpack@$WEBPACK_VERSION
     fi
-# script:
-#   - 'npm run travis:$JOB_PART'
-# after_success:
-#   - 'bash <(curl -s https://codecov.io/bash)'
