--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
 jobs:
   fast_finish: true
   allow_failures:
-    - 'env: WEBPACK_VERSION=canary'
+    - env: WEBPACK_VERSION=canary
   include:
     - |-
       - &test-latest
