ci: Test defaults output

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,12 +5,12 @@ branches:
   only:
     - master
 jobs:
-  fast_finish: true
-  allow_failures:
-    - env: WEBPACK_VERSION=canary
-  include:
-    - |-
-      &test-latest
+  - |-
+    fast_finish: true,
+    allow_failures:
+      - env: 'WEBPACK_VERSION=canary'
+    include:
+      - &test-latest
         stage: Webpack @latest
         nodejs: 6
         env: WEBPACK_VERSION=latest JOB_PART=test
@@ -43,7 +43,3 @@ before_script:
     if [ "$WEBPACK_VERSION" ]; then
       npm i --no-save webpack@$WEBPACK_VERSION
     fi
-script:
-  - 'npm run travis:$JOB_PART'
-after_success:
-  - 'bash <(curl -s https://codecov.io/bash)'
