--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run build -- -w",
+    "appveyor:test": "npm run test",
     "build": "cross-env NODE_ENV=production babel src -d dist --ignore 'src/**/*.test.js'",
     "clean": "del-cli dist",
     "clean:dist": "del-cli dist",
@@ -23,32 +24,31 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --collectCoverageFrom='src/**/*.js' --coverage",
-    "travis:coverage": "npm run test:coverage",
+    "travis:coverage": "npm run test:coverage -- --runInBand",
     "travis:lint": "npm run lint && npm run security",
-    "travis:test": "npm run test",
+    "travis:test": "npm run test -- --runInBand",
     "webpack-defaults": "webpack-defaults"
   },
   "devDependencies": {
     "babel-cli": "^6.24.0",
-    "babel-jest": "^19.0.0",
+    "babel-jest": "^20.0.3",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.2.2",
-    "cross-env": "^3.2.4",
-    "del-cli": "^0.2.1",
+    "babel-preset-env": "^1.5.1",
+    "cross-env": "^5.0.1",
+    "del-cli": "^1.0.0",
     "eslint": "^3.19.0",
     "eslint-config-webpack": "^1.2.1",
     "eslint-plugin-import": "^2.2.0",
-    "jest": "^19.0.2",
-    "lint-staged": "^3.4.0",
-    "nodemon": "^1.11.0",
+    "jest": "^20.0.4",
+    "lint-staged": "^3.6.0",
     "nsp": "^2.6.3",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
-    "webpack-defaults": "^1.1.0"
+    "webpack-defaults": "^1.4.0"
   },
   "peerDependencies": {
-    "webpack": "<2 || ^2.1.0-beta || ^2.2.0-rc"
+    "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
   },
   "engines": {
     "node": ">= 4.3 < 5.0.0 || >= 5.10"
