--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "webpack-defaults": "^1.4.0"
   },
   "peerDependencies": {
+    "acorn": ">= 5.1.1",
     "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
   },
   "engines": {
