--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "webpack-defaults": "^1.4.0"
   },
   "peerDependencies": {
-    "acorn": ">= 5.1.1",
+    "acorn": "^4.0.4 || ^5.0.0",
     "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
   },
   "engines": {
