--- a/package.json
+++ b/package.json
@@ -30,28 +30,29 @@
     "webpack-defaults": "webpack-defaults"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.0",
-    "babel-jest": "^19.0.0",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.5.1",
-    "cross-env": "^5.0.1",
-    "del-cli": "^1.0.0",
-    "eslint": "^3.19.0",
-    "eslint-config-webpack": "^1.2.1",
-    "eslint-plugin-import": "^2.2.0",
-    "jest": "^19.0.2",
-    "lint-staged": "^3.6.0",
-    "nsp": "^2.6.3",
+    "babel-cli": "^6.26.0",
+    "babel-jest": "^21.2.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "cross-env": "^5.1.0",
+    "del-cli": "^1.1.0",
+    "eslint": "^4.9.0",
+    "eslint-config-webpack": "^1.2.5",
+    "eslint-plugin-import": "^2.8.0",
+    "jest": "^21.2.1",
+    "lint-staged": "^4.3.0",
+    "nsp": "^2.8.1",
     "pre-commit": "^1.2.2",
-    "standard-version": "^4.0.0",
-    "webpack-defaults": "^1.4.0"
+    "standard-version": "^4.2.0",
+    "webpack": "^3.8.1",
+    "webpack-defaults": "^1.6.0"
   },
   "peerDependencies": {
-    "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
+    "webpack": "^2.0.0 || ^3.0.0"
   },
   "engines": {
-    "node": ">= 4.3 < 5.0.0 || >= 5.10"
+    "node": ">= 4.8 < 5.0.0 || >= 5.10"
   },
   "homepage": "https://webpack.js.org",
   "repository": {
