--- a/package.json
+++ b/package.json
@@ -48,10 +48,10 @@
     "webpack-defaults": "^1.4.0"
   },
   "peerDependencies": {
-    "webpack": "^2.0.0 || >= 3.0.0-rc.0 || ^3.0.0"
+    "webpack": "^3.0.0 || ^4.0.0-alpha.0 || ^4.0.0"
   },
   "engines": {
-    "node": ">= 4.3 < 5.0.0 || >= 5.10"
+    "node": ">= 6 || >= 8"
   },
   "homepage": "https://webpack.js.org",
   "repository": {
