--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ jobs:
   include:
     - &test-latest
       stage: Webpack latest
-      nodejs: 6
+      node_js: 6
       env: WEBPACK_VERSION=latest JOB_PART=test
       script: npm run travis:$JOB_PART
     - <<: *test-latest
-      nodejs: 4.3
+      node_js: 4.8
       env: WEBPACK_VERSION=latest JOB_PART=test
       script: npm run travis:$JOB_PART
     - <<: *test-latest
@@ -28,10 +28,9 @@ jobs:
       script: npm run travis:$JOB_PART
       after_success: 'bash <(curl -s https://codecov.io/bash)'
     - stage: Webpack canary
-      before_script: npm i --no-save git://github.com/webpack/webpack.git#master
-      script: npm run travis:$JOB_PART
       node_js: 8
-      env: WEBPACK_VERSION=canary JOB_PART=test
+      env: WEBPACK_VERSION=4.0.0-alpha.0 JOB_PART=test
+      script: npm run travis:$JOB_PART
 before_install:
   - 'if [[ `npm -v` != 5* ]]; then npm i -g npm@^5.0.0; fi'
   - nvm --version
