--- a/package.json
+++ b/package.json
@@ -45,10 +45,11 @@
     "nsp": "^2.6.3",
     "pre-commit": "^1.2.2",
     "standard-version": "^4.0.0",
+    "webpack": "^4.0.0",
     "webpack-defaults": "^1.4.0"
   },
   "peerDependencies": {
-    "webpack": "^3.0.0 || ^4.0.0-alpha.0 || ^4.0.0"
+    "webpack": "^4.0.0"
   },
   "engines": {
     "node": ">= 6.9.0 || >= 8.9.0"
